[5] 오류 수정(웹 페이지 새로고침에 따른 수동 검증 부여)