@@ -3,12 +3,13 @@ package com.project.roomlocationweb.controller;
 import com.project.roomlocationweb.util.JwtTokenProvider;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Map;
+import java.util.Collections;
 
 @RestController
 @RequestMapping("/api")
@@ -17,16 +18,16 @@ public class AuthController {
 
     private final JwtTokenProvider jwtTokenProvider;
 
-    @GetMapping("/check-session")
-    public ResponseEntity<?> checkSession(HttpServletRequest request) {
+    @PostMapping("/check-token")
+    public ResponseEntity<?> checkToken(HttpServletRequest request) {
         String token = request.getHeader("Authorization");
         if (token != null && token.startsWith("Bearer ")) {
             token = token.substring(7);
             if (jwtTokenProvider.validateToken(token)) {
                 String username = jwtTokenProvider.getUsernameFromToken(token);
-                return ResponseEntity.ok(Map.of("loggedIn", true, "username", username));
+                return ResponseEntity.ok(Collections.singletonMap("username", username));
             }
         }
-        return ResponseEntity.ok(Map.of("loggedIn", false));
+        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("토큰이 유효하지 않습니다.");
     }
 }
